...
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment"
    android:layout_marginBottom="50dp"
    android:id="@+id/fragment_home"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/v_ret_i_dag"/>
        <LinearLayout
            android:id="@+id/linearlayout_home_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:padding="10dp">
...
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_weatherAlerts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
...
                        android:src="@drawable/action_chevron_right_24"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
...
                android:background="@color/quantum_grey400"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearlayout_home_forstfire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
...
