...
                    android:entries="@array/metalerts_sort"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_metalerts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="4dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
...
